--- a/server/authTokens.env
+++ b/server/authTokens.env
@@ -1,2 +1,2 @@
-ACCOUNT_SID="ACad12f26ada12dc0623cbe1c153537008"
-AUTH_TOKEN="39309d46f4e900dddce6759b427f9f72"
+ACCOUNT_SID=ACad12f26ada12dc0623cbe1c153537008
+AUTH_TOKEN=39309d46f4e900dddce6759b427f9f72
